Calling the right DB on Pagodabox

--- a/Site/index.html
+++ b/Site/index.html
@@ -149,7 +149,7 @@
          type: 'POST',
          success: function(output) {
                       //SWITCH TO OTHER PAGE
-                      alert(output);
+                      //alert(output);
                       window.location.replace("fillskillssecondpage.php");
                       //$('#naslov b').html(output);
                   }
