Some text updated

--- a/Site/index.html
+++ b/Site/index.html
@@ -56,22 +56,22 @@
 						<div class="item">
 							<div class="ico-box"><a href="#"><img src="images/ico01.gif" width="230" height="230" alt="image description"></a></div>
 							<h2><a href="#">Acquired Skills</a></h2>
-							<p>The houses having low fronts, and being adorned with verandas, beneath which he caught glimpses of neat peristyles.    </p>
+							<p>Learn more about your current skills. Check out the current trends on your skills. Find out how you can improve on them.    </p>
 						</div>
 						<div class="item">
 							<div class="ico-box"><a href="#"><img src="images/ico02.gif" width="230" height="230" alt="image description"></a></div>
 							<h2><a href="#">Missing Skills</a></h2>
-							<p>The houses having low fronts, and being adorned with verandas, beneath which he caught glimpses of neat peristyles.    </p>
+							<p>Compare your current resume against the job market to find out which new skill to learn and where to learn it.    </p>
 						</div>
 						<div class="item">
 							<div class="ico-box"><a href="#"><img src="images/ico03.gif" width="230" height="230" alt="image description"></a></div>
 							<h2><a href="#">Available Courses</a></h2>
-							<p>This quarter occupied, with its streets, squares, docks, and warehouses, all the space between the "promontory of the Treaty"</p>
+							<p>What are the best courses for the skill you want to learn?"</p>
 						</div>
 						<div class="item">
 							<div class="ico-box"><a href="#"><img src="images/ico04.gif" width="230" height="230" alt="image description"></a></div>
 							<h2><a href="#">Available Jobs</a></h2>
-							<p>The houses having low fronts, and being adorned with verandas, beneath which he caught glimpses of neat peristyles.</p>
+							<p>Check out the best jobs in the market for your resume.</p>
 						</div>
 					</div>
 				</div>
@@ -81,8 +81,8 @@
 					<img src="images/img03.png" width="478" height="271" alt="image description">
 					<div class="text-holder">
 						<h1>About Us</h1>
-						<p class="intro">At dawn on the 13th the Carnatic <br />entered the port of Yokohama.  This</p>
-						<p>Passepartout went timidly ashore on this so curious territory of the Sons of the Sun.  He had nothing better to do than, taking chance for his guide, to wander aimlessly through the streets of Yokohama.  He found himself at first in a thoroughly European quarter, the houses having low fronts, and being adorned with verandas, beneath which he caught glimpses of neat peristyles.  This quarter </p>
+						<p class="intro">Find which skills are in demand in the market <br>and then quickly take the best courses that help you catch up. </p>
+						<p>As the American economy tumbled in 2008, we saw a disconnect between growing numbers of unemployed and a large pool of jobs available. The missing link was skills required to apply for these jobs. Our concerns led us to create FillSkills - a bridge leading people to their dream jobs. </p>
 						<a href="#" class="btn">Click here to find out more about us</a>
 					</div>
 				</article>
@@ -93,7 +93,7 @@
 						<address>
 							<span>1134 Somewhere Street<br />Chino Hills, CA 91709</span>
 							<span>
-								Phone: 909-320-5668<br />Fax: 909-540-5796
+								Phone: 999-999-9999
 							</span>
 						</address>
 						<ul class="sociable">
