--- a/Site/index.html
+++ b/Site/index.html
@@ -144,7 +144,7 @@
 	</div>
 	<script type="text/javascript">
 	$( document ).ready(function() {
-		humane.log("Start by entering your skills into the text box. Then press Submit", {waitForMove=true})
+		humane.log("Start by entering your skills into the text box. Then press Submit", {waitForMove:true})
 	});
 	$('#btnupload').click(function () {
 		console.log($('#txtskill').val());
