Nicer popup message

--- a/Site/index.html
+++ b/Site/index.html
@@ -144,7 +144,7 @@
 	</div>
 	<script type="text/javascript">
 	$( document ).ready(function() {
-		humane.log("Start by entering your skills into the text box. Then press Submit", {waitForMove:true, timeout:5000})
+		humane.log("Hi, welcome. <br> You can start by entering your skills (comma seperated) into the text box below.<br> <br>Then press Submit", {waitForMove:true, timeout:2500})
 	});
 	$('#btnupload').click(function () {
 		console.log($('#txtskill').val());
