--- a/betathanks.html
+++ b/betathanks.html
@@ -283,7 +283,7 @@ Thank you for signing up for the FillSkills BETA! We will get back to as soon as
 Thank you for your patience<br>
 
 <em>--<br>
-Abhi, Anshu and Ketan</em><br>
+Abhi and Maks</em><br>
 </td>
                                                     </tr>
                                                 </tbody>
